--- a/main.css
+++ b/main.css
@@ -133,7 +133,6 @@ header h1 {
   flex-direction: column;
   float: right;
   margin: 20px 50px;
-  z-index: auto;
   width: 500px;
 }
 
@@ -170,7 +169,8 @@ header h1 {
 
 .contact {
   position: relative;
-  top: 100px;
+  top: 60px;
+  width: 600px;
 }
 
 .logos {
@@ -188,6 +188,8 @@ footer {
   color: white;
   margin: 20px 0;
   padding: 10px;
+  position: relative;
+  top: 50px;
 }
 
 footer a {
