--- a/main.css
+++ b/main.css
@@ -143,6 +143,7 @@ header h1 {
 
 .certifications div:last-child {
   border-bottom: none;
+  z-index: 1;
 }
 
 .certifications h4, p, a {
@@ -197,6 +198,7 @@ footer a {
   text-decoration: none;
 }
 
+/* Smart phone styles */
 
 @media screen and (max-width: 600px) {
 
@@ -263,11 +265,6 @@ footer a {
 
   .certifications div {
     margin: 0 10px;
-  }
-
-  .contact {
-    position: relative;
-    top: 20px;
   }
 
 }
