--- a/main.css
+++ b/main.css
@@ -88,6 +88,7 @@ header h1 {
 }
 
 .cards {
+  align-items: flex-start;
   display: flex;
 }
 
@@ -121,6 +122,22 @@ header h1 {
 
 #timespan {
   font-size: 1.05rem;
+}
+
+/* Show and hide details start */
+
+.details {
+  display: none;
+}
+
+.details-button {
+  background-color: white;
+  border: 2px solid limegreen;
+  border-radius: 3px;
+  color: black;
+  font-size: 1em;
+  margin: 10px;
+  padding: 5px 10px;
 }
 
 .skills img {
